[ve] Fix the keyboard navigation to the initiator column
This got broken in the crrev.com/c/5339956

Bug: chromium:1467464
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5358035
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>
Auto-Submit: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/network/networkLogView.css
+++ b/front_end/panels/network/networkLogView.css
@@ -141,8 +141,12 @@
   color: inherit;
 }
 
-.initiator-column .devtools-link {
+.initiator-column .text-button.devtools-link,
+.initiator-column .text-button.devtools-link:focus-visible {
   color: inherit;
+  background-color: transparent;
+  outline-offset: 0;
+  height: 16px;
 }
 
 .network-error-row,
